source/styles.scss
// Setup - start
@use "sass:color";
@use "sass:list";

$breakpoint__: 450px;
$breakpoint__x-small: 450px;
$breakpoint__small: 768px;
$breakpoint__medium: 992px;
$breakpoint__large: 1200px;
$breakpoint__x-large: 1700px;

$colour-primary: #292929;
$colour-secondary: #dddddd;
$colour-highlight: #af0502;
$colour-grey: #505050;
$colour-debug: green;

$text-size: 16px;

$padding__standard: 2rem;
$padding__thin: calc($padding__standard / 2);

$margin__standard: $padding__standard;
$margin__thin: calc($margin__standard / 2);

@mixin reset-img {
	display: block;
	max-width: 100%;
	max-height: 100%;
	margin: auto;
}

// Takes a number of columns and optionally their widths
@mixin single-row-grid($number-of-columns, $column-widths: (auto)) {
	$columns: "";
	@if (
		// Check to make sure there is a width for each column
		list.length($column-widths) !=
			($number-of-columns) and
			list.length($column-widths) !=
			1
	) {
		@error "Must be as many column widths as number of columns";
	} @else if (list.length($column-widths) == 1) {
		@for $i from 1 through $number-of-columns {
			$columns: #{$columns} #{$column-widths};
		}
	} @else {
		@for $i from 1 through $number-of-columns {
			$columns: #{$columns} #{list.nth($column-widths, $i)};
		}
	}
	display: grid;
	@debug "columns: #{$columns}";
	grid-template-columns: $columns;
	grid-template-rows: 100%; // Stops child elements from breaking bounds
}
// Setup and definitions - end

/* General stylings and helper classes - start */
:root {
	--swiper-theme-color: #{$colour-highlight};
}

html {
	font-size: $text-size;
}

* {
	box-sizing: border-box;
	font-family: "PT Serif", serif;
	// border: 2px solid $colour-debug; // Debug borders
}

body {
	/* Setup grid to allow side bars */
	display: grid;
	grid: 15vh auto / 100vw;
	grid-template-areas: "header" "main";
	overflow-x: hidden;
}

h2 {
	font-size: 1.7rem;
}

sup {
	font-size: 65%;
}

a {
	color: $colour-highlight;
	&:hover {
		color: adjust-color($colour-highlight, $saturation: +10%, $lightness: -10%, $alpha: 1.0);
	}
	&:visited {
		color: adjust-color($colour-highlight, $saturation: 0%, $lightness: +10%, $alpha: 1.0);
	}
}

.footnote {
	font-size: 50%;
}

/* Standardise images to aid formatting */
.img-container {
	display: flex;
	justify-content: center;
	align-items: center;
	max-width: 100%;
	max-height: 100%;

	img {
		@include reset-img;
	}
}

.polaroid {
	/* Polaroid is 3.5" x 4.2"
	3.5 : 4.2 = 5 : 6 */
	aspect-ratio: 5 / 6;
	display: grid;
	/* Border around photo 0.2"
	Photo is 3.1"
	Leaving 0.7" at the bottom for caption (not including the bottom photo border)
	Turning these into fractions of width/height whilst keeping the resulting
	absolute values equal results in the following abbomination - I'm sorry
	2/42 + 31/42 + 2/42 + 7/42 = 42/42-> Rows = height = 4.2" = 42units
	2/35 + 31/35 + 2/35 = 35/35 -> Columns = widths = 3.5" = 35units
	42 * 35 = 1470
	70/1470 + 1085/1470 + 70/1470 + 245/1470 = 1470/1470  -> Rows
	84/1470  + 1302/1470 + 84/1470 = 1470/1470 -> Columns
	 */
	grid-template-rows: 70fr 1085fr 70fr 245fr;
	grid-template-columns: 84fr 1302fr 84fr;
	grid-template-areas: "padding__top padding__top padding__top" "padding__left photo padding__right" "caption caption caption" "caption caption caption";
	background-color: whitesmoke;

	border-radius: 0.5%;
	// box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.5);

	.polaroid__photo {
		grid-area: photo;
		display: flex;
		justify-content: center;
		align-items: center;
		overflow: hidden;

		img {
			filter: sepia(25%);
			height: 100%;
			object-fit: cover;
		}
	}

	.polaroid__caption {
		grid-area: caption;
		padding-left: $padding__thin;
		padding-right: $padding__thin;
		padding-bottom: $padding__thin;
		padding-top: 0;
		min-height: 100%;

		p {
			transform-origin: top;
			// margin-block: 0 0;
			text-align: center;
			font-size: 0.7rem;
			font-family: "Permanent Marker", cursive;
			color: black;
		}
	}
}
/* General stylings and helper classes - end */

/* Header stuff - start */
header {
	z-index: 10;
	position: -webkit-sticky;
	position: sticky;
	top: 0;
	border-bottom: 0.44rem solid $colour-highlight;
	border-radius: 0 0 1rem 1rem;
	box-shadow: 0 0.3rem 1rem rgba(0, 0, 0, 0.5);

	grid-area: header;
	background-color: $colour-secondary;
	@include single-row-grid(3, 2fr 1fr 2fr);

	.header__item {
		padding: 0 $padding__thin;
	}

	/* Main logo */
	.fools-logo {
		grid-column: 2;

		img {
			padding: calc($padding__thin/2) 0;
		}
	}

	nav {
		grid-column: 3;
		margin-right: $margin__standard;
	}

	/* Outer nav element */
	.nav {
		@include single-row-grid(1);
	}

	/* Inner ul element */
	.navigation-list {
		grid-column: 1;
		width: 100%;
		padding-inline-start: 0;

		display: flex;
		flex-wrap: wrap;
		justify-content: space-evenly;
		align-items: center;
		gap: 0rem $margin__standard;

		li {
			display: inline-block;

			a {
				font-variant: small-caps;
				font-weight: 800;
				font-size: 2rem;
				text-decoration: none;
				color: $colour-highlight;

				&:hover {
					color: color.adjust($colour-highlight, $saturation: -30%);
				}
				&:visited {
					color: $colour-highlight;
				}
			}
		}
	}
}

/* Social media links container */
.socials {
	grid-column: 1;
	@include single-row-grid(3);
	gap: $margin__standard;
	margin-left: $margin__standard;

	a {
		margin: $margin__thin 0;
		// padding: 0 ;
	}

	div {
		margin: 15% $margin__thin;
	}
}
/* Header stuff - end */

/* Side bars - start */
.side-bars {
	display: none;
	background-color: $colour-secondary;
}

#side-bars__left {
	grid-area: side-bars__left;
}

#side-bars__right {
	grid-area: side-bars__right;
}
/* Side bars - end */

@mixin flow-container {
	display: flex;
	flex-direction: column;
	@media only screen and (min-width: 992px) {
		flex-direction: row;
	}
	flex-wrap: nowrap;
	gap: $margin__thin;
	margin-bottom: $margin__standard;
}

main {
	width: 100%;
	background-color: $colour-primary;
	color: $colour-secondary;
	grid-area: main;
	padding: $padding__standard;

	> section {
		padding-bottom: $padding__standard;
		border-bottom: 0.1rem solid $colour-highlight;
		margin-bottom: $margin__standard;
	}
}

.home-section {
	> div {
		@include flow-container();
	}

	.home-section__title {
		font-size: 3rem;
		font-weight: bold;
		text-align: center;
		margin-block-start: 0;
	}

	.home-section__text {
		font-size: 1.4rem;
		flex: 1 1;

		> p {
			margin-block-start: 0;
		}

		#home-section__text__super-2 {
			font-size: 30%;
		}
	}

	.home-section__photo {
		flex-basis: 20rem;
		flex: 1 1;
		min-width: 250px;
		// max-height: 60vh;
		overflow: hidden;

		> img {
			border-radius: 3rem;
		}
	}
}

.about-section {
	> div {
		@include flow-container();
		gap: $margin__standard;
		padding-top: 1rem;

		padding-bottom: 2.5rem;
		border-bottom: 0.1rem solid $colour-grey;

		&:nth-child(2n) {
			flex-wrap: wrap-reverse;
		}

		&:last-child {
			padding-bottom: 0rem;
			border-bottom: none;
		}
	}

	.about-section__text {
		flex: 2 1;

		.text__title {
			margin-block-start: 0;
			text-align: center;
		}

		.text__body {
			text-align: justify;
			// font-size: large;

			> p {
				margin-block-start: 0;
			}
		}
	}

	.about-section__media {
		min-width: 250px;
		overflow: hidden;
		position: relative;
	}

	#about-section__title-1 {
	}

	#about-section__text-1 {
	}

	#about-section__title-2 {
	}

	#about-section__text-2 {
	}

	#about-section__media-1 {
		flex: 1 1;
		overflow: visible;
		margin-left: $margin__standard;
		display: flex;
		align-items: center;
		.polaroid {
			.polaroid__caption {
				p {
					font-size: 1.2rem;
				}
			}
		}

		.swiper {
			width: 60%;
		}
	}

	#about-section__media-2 {
		flex: 1 1;
		> * {
			border-radius: 3rem;
		}
	}
}

.gallery-section {
	// height: 80vh;
	max-width: 100%;
	padding-top: $padding__thin;
	overflow: hidden;
	.gallery__carousel {
		width: 100%;
		height: 100%;
		margin: 0;
		overflow: visible;
		position: relative;
		$swiper-ui-base-size: 1.5rem;
		$nav-size: calc($swiper-ui-base-size * 2);
		--swiper-navigation-size: #{$nav-size};

		@mixin nav-button {
			width: auto;
			height: auto;
			background-color: color.adjust($colour-grey, $alpha: -0.1);
			border-radius: calc($nav-size / 3);
			&:after {
				margin: calc($nav-size / 3);
			}
		}

		.swiper-button-next,
		.swiper-button-prev {
			@include nav-button;
		}

		.carousel__slider {
			.swiper-slide-active {
				&:hover {
					z-index: 50;
				}
			}
			.slider__slide {
				.polaroid {
					width: 30vw;
					.polaroid__caption {
						p {
							@media only screen and (min-width: 1351px) {
								font-size: 1.7rem;
							}
							@media only screen and (min-width: 801px) and (max-width: 1350px) {
								font-size: 1.5rem;
							}
							@media only screen and (min-width: 451px) and (max-width: 800px) {
								font-size: 1rem;
							}
						}
					}
				}
			}
		}
		.swiper-pagination {
			$bullet-size: $swiper-ui-base-size;
			display: flex;
			position: relative;
			width: max-content;
			margin: auto;
			// height: calc($bullet-size * 1.5);
			align-items: center;
			// left: 50%;
			// transform: translateX(-50%);
			background-color: color.adjust($colour-grey, $alpha: -0.2);
			border-radius: calc($bullet-size / 2);
			gap: calc($bullet-size / 2);
			padding: 0 calc($bullet-size / 2);
			--swiper-pagination-bullet-inactive-color: #{$colour-secondary};
			--swiper-pagination-bullet-inactive-opacity: 0.7;
			&-bullet {
				// flex: 0 0 1.5rem;
				width: $bullet-size;
				height: $bullet-size;
				margin-top: calc($bullet-size / 3);
				margin-bottom: calc($bullet-size / 3);
				margin-left: 0;
				margin-right: 0;
				// display: block;
				// margin-top: $margin__thin;
				// margin-bottom: auto;
			}
		}
	}
}
.contact-section {
	.contact-section__title {
		text-align: center;
	}
}

@media only screen and (max-width: $breakpoint__x-small) {
	html {
		font-size: 12px;
	}
}
@media only screen and (min-width: calc($breakpoint__x-small + 1px)) {
	html {
		font-size: 14px;
	}
	.about-section {
		#about-section__media-1 {
			.polaroid {
				.polaroid__caption {
					p {
						font-size: 1.4rem;
					}
				}
			}
		}
	}
}
@media only screen and (min-width: $breakpoint__small) {
	html {
		font-size: 14px;
	}
	.about-section {
		#about-section__media-1 {
			.polaroid {
				.polaroid__caption {
					p {
						font-size: 2rem;
					}
				}
			}
		}
	}
}
@media only screen and (min-width: $breakpoint__medium) {
	html {
		font-size: 16px;
	}
	body {
		grid: 15vh auto / 8vw 84vw 8vw;
		grid-template-areas: "header header header" "side-bars__left main side-bars__right";
	}
	.side-bars {
		display: initial;
	}
	.about-section {
		#about-section__media-1 {
			.polaroid {
				.polaroid__caption {
					p {
						font-size: initial;
					}
				}
			}
		}
		#about-section__media-2 {
			> * {
				width: 100%;
			}
		}
	}
}
@media only screen and (min-width: $breakpoint__large) {
	html {
		font-size: 18px;
	}
}

